// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OEEDataMap > returns correctly formatted output... > while granularity is date 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": 1,
  "availabilityFormatted": "100,00%",
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": 86400,
  "color": null,
  "datapointDateRange": null,
  "defined": true,
  "definedQty": 0,
  "definedScrapQty": 0,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "2022-11-25",
  "idealPerformanceQty": 1440,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "25",
  "notes": null,
  "notesCount": null,
  "oee": 0.5,
  "oeeFormatted": "50,00%",
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": 0,
  "ooeFormatted": "0,00%",
  "operatingTime": 14400,
  "operatingTimeFormatted": "4h 00m 00s",
  "operatingTimePctFormatted": "∞,00% / ∞,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "performance": 0.5,
  "performanceFormatted": "50,00%",
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 0,
  "plannedTimeFormatted": "0s",
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    1957,
  ],
  "productionOrder": null,
  "productionTime": 14400,
  "qty": 720,
  "quality": 1,
  "qualityFormatted": "100,00%",
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapQty": 0,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    1,
  ],
  "tableTimeLabel": "25.11.2022",
  "technicalAvailability": 1,
  "technicalAvailabilityFormatted": "100,00%",
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": 0.08333333333333333,
  "teepFormatted": "8,33%",
  "tooltipXLabel": "25.11.2022",
  "trendValue": 0.5,
  "unitId": "tk",
  "value": 0.5,
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "25.11.2022",
}
`;

exports[`OEEDataMap > returns correctly formatted output... > while granularity is month 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": 0.007181136120042873,
  "availabilityFormatted": "0,72%",
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": 172800,
  "color": null,
  "datapointDateRange": null,
  "defined": true,
  "definedQty": 0,
  "definedScrapQty": 0,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "202211",
  "idealPerformanceQty": 1,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "November",
  "notes": null,
  "notesCount": null,
  "oee": 0.007181136120042873,
  "oeeFormatted": "0,72%",
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": 0,
  "ooeFormatted": "0,00%",
  "operatingTime": 134,
  "operatingTimeFormatted": "02m 14s",
  "operatingTimePctFormatted": "∞,00% / ∞,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "performance": 1,
  "performanceFormatted": "100,00%",
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 0,
  "plannedTimeFormatted": "0s",
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": null,
  "productionTime": 134,
  "qty": 1,
  "quality": 1,
  "qualityFormatted": "100,00%",
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapQty": 0,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "November",
  "technicalAvailability": 1,
  "technicalAvailabilityFormatted": "100,00%",
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": 0.0007754629629629629,
  "teepFormatted": "0,08%",
  "tooltipXLabel": "25.11.2022 - 26.11.2022",
  "trendValue": 0.007181136120042873,
  "unitId": "MIN",
  "value": 0.007181136120042873,
  "xScaleValue": "202211",
  "xScaleValueFormatted": "25.11.2022 - 26.11.2022",
}
`;

exports[`OEEDataMap > returns correctly formatted output... > while granularity is total 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": 0.007181136120042873,
  "availabilityFormatted": "0,72%",
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": 172800,
  "color": null,
  "datapointDateRange": null,
  "defined": true,
  "definedQty": 0,
  "definedScrapQty": 0,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": 53,
  "idealPerformanceQty": 1,
  "isFake": false,
  "lotCode": "LOT-001",
  "measureLabel": "Eelsorteer 1",
  "notes": null,
  "notesCount": null,
  "oee": 0.007181136120042873,
  "oeeFormatted": "0,72%",
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": 0,
  "ooeFormatted": "0,00%",
  "operatingTime": 134,
  "operatingTimeFormatted": "02m 14s",
  "operatingTimePctFormatted": "∞,00% / ∞,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "performance": 1,
  "performanceFormatted": "100,00%",
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 0,
  "plannedTimeFormatted": "0s",
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": "ORDER-42",
  "productionTime": 134,
  "qty": 1,
  "quality": 1,
  "qualityFormatted": "100,00%",
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapQty": 0,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "Eelsorteer 1",
  "technicalAvailability": 1,
  "technicalAvailabilityFormatted": "100,00%",
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": 0.0007754629629629629,
  "teepFormatted": "0,08%",
  "tooltipXLabel": "Eelsorteer 1",
  "trendValue": 0.007181136120042873,
  "unitId": "MIN",
  "value": 0.007181136120042873,
  "xScaleValue": 53,
  "xScaleValueFormatted": "",
}
`;

exports[`OEEDataMap > returns correctly formatted output... > while granularity is weekofyear 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": 1,
  "availabilityFormatted": "100,00%",
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": 172800,
  "color": null,
  "datapointDateRange": null,
  "defined": true,
  "definedQty": 0,
  "definedScrapQty": 0,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "202247",
  "idealPerformanceQty": 1440,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "47",
  "notes": null,
  "notesCount": null,
  "oee": 0.5,
  "oeeFormatted": "50,00%",
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": 0,
  "ooeFormatted": "0,00%",
  "operatingTime": 14400,
  "operatingTimeFormatted": "4h 00m 00s",
  "operatingTimePctFormatted": "∞,00% / ∞,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "performance": 0.5,
  "performanceFormatted": "50,00%",
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 0,
  "plannedTimeFormatted": "0s",
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    1957,
  ],
  "productionOrder": null,
  "productionTime": 14400,
  "qty": 720,
  "quality": 1,
  "qualityFormatted": "100,00%",
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapQty": 0,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    1,
  ],
  "tableTimeLabel": "Week 47",
  "technicalAvailability": 1,
  "technicalAvailabilityFormatted": "100,00%",
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": 0.041666666666666664,
  "teepFormatted": "4,17%",
  "tooltipXLabel": "Week 47",
  "trendValue": 0.5,
  "unitId": "tk",
  "value": 0.5,
  "xScaleValue": "202247",
  "xScaleValueFormatted": "Week 47",
}
`;

exports[`OEEDataMap > returns correctly formatted output... > while granularity is year 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": 0.007181136120042873,
  "availabilityFormatted": "0,72%",
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": 172800,
  "color": null,
  "datapointDateRange": null,
  "defined": true,
  "definedQty": 0,
  "definedScrapQty": 0,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "2022",
  "idealPerformanceQty": 1,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "2022",
  "notes": null,
  "notesCount": null,
  "oee": 0.007181136120042873,
  "oeeFormatted": "0,72%",
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": 0,
  "ooeFormatted": "0,00%",
  "operatingTime": 134,
  "operatingTimeFormatted": "02m 14s",
  "operatingTimePctFormatted": "∞,00% / ∞,00%",
  "operator": "",
  "operatorId": [
    null,
  ],
  "performance": 1,
  "performanceFormatted": "100,00%",
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 0,
  "plannedTimeFormatted": "0s",
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    8,
  ],
  "productionOrder": null,
  "productionTime": 134,
  "qty": 1,
  "quality": 1,
  "qualityFormatted": "100,00%",
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": 0,
  "rowProducedAltQtyFormatted": "0,00",
  "rowProducedQty": 0,
  "rowProducedQtyFormatted": "0,00",
  "scrapQty": 0,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": 0,
  "shiftTimeFormatted": "0s",
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": [
    2,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "2022",
  "technicalAvailability": 1,
  "technicalAvailabilityFormatted": "100,00%",
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": 0.0007754629629629629,
  "teepFormatted": "0,08%",
  "tooltipXLabel": "2022",
  "trendValue": 0.007181136120042873,
  "unitId": "MIN",
  "value": 0.007181136120042873,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;

exports[`OEEDataMap > returns correctly unformatted output... > while granularity is date 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": null,
  "availabilityFormatted": null,
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": null,
  "color": null,
  "datapointDateRange": null,
  "defined": null,
  "definedQty": null,
  "definedScrapQty": null,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealPerformanceQty": 1440,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "2022-11-25",
  "notes": null,
  "notesCount": null,
  "oee": null,
  "oeeFormatted": null,
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": null,
  "ooeFormatted": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "performance": null,
  "performanceFormatted": null,
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 14400,
  "plannedTimeFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": null,
  "productId": 1957,
  "productionOrder": null,
  "productionTime": 14400,
  "qty": 720,
  "quality": null,
  "qualityFormatted": null,
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapQty": 0,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": 1,
  "stationId": 1,
  "tableTimeLabel": "2022-11-25",
  "technicalAvailability": null,
  "technicalAvailabilityFormatted": null,
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": null,
  "teepFormatted": null,
  "tooltipXLabel": "2022-11-25",
  "trendValue": null,
  "unitId": "tk",
  "value": null,
  "xScaleValue": "2022-11-25",
  "xScaleValueFormatted": "2022-11-25",
}
`;

exports[`OEEDataMap > returns correctly unformatted output... > while granularity is month 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": null,
  "availabilityFormatted": null,
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": null,
  "color": null,
  "datapointDateRange": null,
  "defined": null,
  "definedQty": null,
  "definedScrapQty": null,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealPerformanceQty": 1,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "202211",
  "notes": null,
  "notesCount": null,
  "oee": null,
  "oeeFormatted": null,
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": null,
  "ooeFormatted": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "performance": null,
  "performanceFormatted": null,
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 18660,
  "plannedTimeFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": null,
  "productionTime": 134,
  "qty": 1,
  "quality": null,
  "qualityFormatted": null,
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapQty": 0,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "tableTimeLabel": "202211",
  "technicalAvailability": null,
  "technicalAvailabilityFormatted": null,
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": null,
  "teepFormatted": null,
  "tooltipXLabel": "202211",
  "trendValue": null,
  "unitId": "MIN",
  "value": null,
  "xScaleValue": "202211",
  "xScaleValueFormatted": "202211",
}
`;

exports[`OEEDataMap > returns correctly unformatted output... > while granularity is total 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": null,
  "availabilityFormatted": null,
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": null,
  "color": null,
  "datapointDateRange": null,
  "defined": null,
  "definedQty": null,
  "definedScrapQty": null,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealPerformanceQty": 1,
  "isFake": false,
  "lotCode": "LOT-001",
  "measureLabel": "Eelsorteer 1",
  "notes": null,
  "notesCount": null,
  "oee": null,
  "oeeFormatted": null,
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": null,
  "ooeFormatted": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "performance": null,
  "performanceFormatted": null,
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 18660,
  "plannedTimeFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": "ORDER-42",
  "productionTime": 134,
  "qty": 1,
  "quality": null,
  "qualityFormatted": null,
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapQty": 0,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "tableTimeLabel": "Eelsorteer 1",
  "technicalAvailability": null,
  "technicalAvailabilityFormatted": null,
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": null,
  "teepFormatted": null,
  "tooltipXLabel": "Eelsorteer 1",
  "trendValue": null,
  "unitId": "MIN",
  "value": null,
  "xScaleValue": 53,
  "xScaleValueFormatted": 53,
}
`;

exports[`OEEDataMap > returns correctly unformatted output... > while granularity is weekofyear 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": null,
  "availabilityFormatted": null,
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": null,
  "color": null,
  "datapointDateRange": null,
  "defined": null,
  "definedQty": null,
  "definedScrapQty": null,
  "entityGroupName": null,
  "entityName": "Evocon production line T2",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealPerformanceQty": 1440,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "202247",
  "notes": null,
  "notesCount": null,
  "oee": null,
  "oeeFormatted": null,
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": null,
  "ooeFormatted": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "performance": null,
  "performanceFormatted": null,
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 14400,
  "plannedTimeFormatted": null,
  "product": "Uus Johanna toode - Product route test",
  "productGroup": null,
  "productGroupId": null,
  "productId": 1957,
  "productionOrder": null,
  "productionTime": 14400,
  "qty": 720,
  "quality": null,
  "qualityFormatted": null,
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapQty": 0,
  "shiftTemplate": "Õhtu",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Evocon production line T2",
  "stationGroup": "Tehas 2",
  "stationGroupId": 1,
  "stationId": 1,
  "tableTimeLabel": "202247",
  "technicalAvailability": null,
  "technicalAvailabilityFormatted": null,
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": null,
  "teepFormatted": null,
  "tooltipXLabel": "202247",
  "trendValue": null,
  "unitId": "tk",
  "value": null,
  "xScaleValue": "202247",
  "xScaleValueFormatted": "202247",
}
`;

exports[`OEEDataMap > returns correctly unformatted output... > while granularity is year 1`] = `
{
  "%groupId": null,
  "alternativeUnitId": null,
  "availability": null,
  "availabilityFormatted": null,
  "availabilityGroupCalendarTimeSec": null,
  "availabilityGroupPlannedStopNotIncludedInOEE": null,
  "availabilityGroupPlannedTime": null,
  "availabilityGroupProductionTime": null,
  "availabilityGroupTotalAltQty": null,
  "availabilityGroupTotalQty": null,
  "calendarTime": null,
  "color": null,
  "datapointDateRange": null,
  "defined": null,
  "definedQty": null,
  "definedScrapQty": null,
  "entityGroupName": null,
  "entityName": "Eelsorteer 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealPerformanceQty": 1,
  "isFake": false,
  "lotCode": null,
  "measureLabel": "2022",
  "notes": null,
  "notesCount": null,
  "oee": null,
  "oeeFormatted": null,
  "oeeGroupCalendarTimeSec": null,
  "oeeGroupPlannedStopNotIncludedInOEE": null,
  "oeeGroupTotalAltQty": null,
  "oeeGroupTotalQty": null,
  "ooe": null,
  "ooeFormatted": null,
  "operatingTime": null,
  "operatingTimeFormatted": null,
  "operatingTimePctFormatted": null,
  "operator": "",
  "operatorId": null,
  "performance": null,
  "performanceFormatted": null,
  "performanceGroupCalendarTimeSec": null,
  "performanceGroupIdealPerfQty": null,
  "performanceGroupPlannedStopNotIncludedInOEE": null,
  "performanceGroupQty": null,
  "performanceGroupTotalAltQty": null,
  "performanceGroupTotalQty": null,
  "plannedTime": 18660,
  "plannedTimeFormatted": null,
  "product": "Lauad 16x75 - (20x63)   200 tk/min",
  "productGroup": null,
  "productGroupId": null,
  "productId": 8,
  "productionOrder": null,
  "productionTime": 134,
  "qty": 1,
  "quality": null,
  "qualityFormatted": null,
  "qualityGroupCalendarTimeSec": null,
  "qualityGroupPlannedStopNotIncludedInOEE": null,
  "qualityGroupQty": null,
  "qualityGroupScrapQty": null,
  "qualityGroupTotalAltQty": null,
  "qualityGroupTotalQty": null,
  "rowProducedAltQty": null,
  "rowProducedAltQtyFormatted": null,
  "rowProducedQty": null,
  "rowProducedQtyFormatted": null,
  "scrapQty": 0,
  "shiftTemplate": "shift without days",
  "shiftTemplateLabel": null,
  "shiftTime": null,
  "shiftTimeFormatted": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "Tehas 1.",
  "stationGroupId": 2,
  "stationId": 53,
  "tableTimeLabel": "2022",
  "technicalAvailability": null,
  "technicalAvailabilityFormatted": null,
  "technicalGroupCalendarTimeSec": null,
  "technicalGroupPlannedStopNotIncludedInOEE": null,
  "technicalGroupPlannedTime": null,
  "technicalGroupTechnicalStop": null,
  "technicalGroupTotalAltQty": null,
  "technicalGroupTotalQty": null,
  "technicalStop": 0,
  "teep": null,
  "teepFormatted": null,
  "tooltipXLabel": "2022",
  "trendValue": null,
  "unitId": "MIN",
  "value": null,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;
